--- a/item.html
+++ b/item.html
@@ -34,6 +34,7 @@
                     <h1><span class="h1">Tasks <span class="h2">Lists</span></span></h1>
                 </div>
                 <div class="AddList">
+                    <a href="page2.html"><i class="fas fa-poo-storm"></i><span class="item">TRIP</span></a>
                     <a href=""><i class="fas fa-plus-circle"></i><span class="item">Add List</span></a>
                 </div>
             </div>
